Weitere Aufgaben in die Seite eingepflegt

--- a/tasks/u1/index.html
+++ b/tasks/u1/index.html
@@ -49,8 +49,8 @@
 
 <example-tabs>
     <example-tab title="&#9432;">
-        <h3>Kleine nette Beschreibung</h3>
-        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+        <h3>Nachbau eines Wireframes mit HTML und CSS</h3>
+        <p>In dieser Aufgabe sollte ein einfaches Wireframe mit HTML und CSS nachgebildet werden. dafür stand lediglich das Mockup zur verfügung.</p>
     </example-tab>
 
     <example-tab title="Mockup">
@@ -74,8 +74,8 @@
   <example-tabs>
 
     <example-tab title="&#9432;">
-        <h3>Kleine nette Beschreibung</h3>
-        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+        <h3>Nachbau eines Wireframes mit HTML und CSS</h3>
+        <p>Auch hier sollte ein einfaches Wireframe nachgebildet werden. Damit das Wireframe möglichst exakt nachgebildet werden konnte, war neben dem Mockup auch der Farbcode <input type="color" value="#b2d6d1"> angegeben sowie ein Hinweis auf die <a href="https://fonts.google.com">Google-Fonts</a> die in der Webseite eingestezt wurden.</p>
     </example-tab>
 
     <example-tab title="Mockup">
@@ -98,8 +98,8 @@
 
   <example-tabs>
     <example-tab title="&#9432;">
-        <h3>Kleine nette Beschreibung</h3>
-        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+        <h3>Nachbau eines Wireframes mit HTML und CSS</h3>
+        <p>Auch in der letzten Aufgabe sollte ein etwas aufwendigeres Wireframe nachgebildet werden. Im Gegensatz zu den vorherigen Aufgaben besteht hier die Schwirigkeit in den nebeneinander plazierten Elementen. Diese lassen sich in einem Fixen Layout recht einfach umsetzten. Ändert sich die Größe des Displays führt dies jedoch zu Problemen. Damit sich Webseiten responsiv verhalten, sind weritere Techniken notwendig, die in Aufgabe 2 vorgestellt werden.</p>
     </example-tab>
     
     <example-tab title="Mockup">
@@ -119,4 +119,4 @@
   </example-tabs>
 
   <h2>Aufgabe 1.6 - Integration in die eigene Webseite</h2>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora magni dignissimos at quibusdam dolor quos quia, ab laborum atque quisquam.</p>
+  <p>Diese Webseitre wurde vollständig mit HTML und CSS gebaut. Weitere auf diesen Technologienen, die auf diesen grundlegenden Elementen aufbauen werden in den weiteren Aufgaben präsentiert.</p>
