--- a/tasks/u10/index.html
+++ b/tasks/u10/index.html
@@ -1,1 +1,24 @@
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique dolorum libero officiis molestiae accusantium obcaecati blanditiis repudiandae non quis cupiditate.
+<h2>Aufgabe 10.1 - Komponente in Vue.js</h2>
+<h2>Aufgabe 10.2 - Menü-Komponente</h2>
+<h2>Aufgabe 10.3 - Vue.js WWW-Navigator</h2>
+
+<example-tabs>
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+
+    <example-tab title="Code">
+        <file-viewer src="/tasks/u10/a1/index.html">index.html</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau">
+        <embed-browser src="/tasks/u10/a1/index.html"></embed-browser>
+    </example-tab>
+</example-tabs>
+
+
+
+
+
+<h2>Aufgabe 10.4 - Integration in die eigene Webseite</h2>
