--- a/tasks/u2/index.html
+++ b/tasks/u2/index.html
@@ -2,8 +2,10 @@
 <example-tabs>
     
     <example-tab title="&#9432;">
-        <h3>Kleine nette Beschreibung</h3>
-        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+        <h3>Desktop-First und Flexbox</h3>
+        <p>In dieser Aufgabe wurde ein responsives Layout erarbeitet. Dafür wurden sogenannte <dfn>Flexboxen</dfn> eingesetzt. Diese erlauben es die Breite und Höhe dynamisch an den Seitenkontext anzupassen und verhinden ein Überlaufen der Komponenten (Komponenten bleiben breiter als der dargestellte Bereich). Das Flex-Layout ist ein eindimensionales Design Element, welches je nach Orientierung <dfn>flex-orientation</dfn> entweder in die höhe oder in die Breite wachen kann <br>
+        Das Layout sollte dabei nach der <dfn>Desktop-First</dfn> Strategie entwickelt werden, welche es vorsieht zuuerst die Webseite auf ein Desktop-Gerät angepasst zu gestalten und anschließend mit <dfn>Media-Querys</dfn> entsprechende Breakpoints zu definieren um die Seite an kleinere Bildschirme anzupassen. Man erkennt die Desktop-First Startegie im Code meist daran, wenn das <dfn>max-width</dfn> Attribut eingesetzt wird. 
+        </p>
     </example-tab>
 
     <example-tab title="Mockup">
@@ -26,8 +28,10 @@
 <example-tabs>
 
     <example-tab title="&#9432;">
-        <h3>Kleine nette Beschreibung</h3>
-        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+        <h3>Mobil-First und Grid-Layout</h3>
+        <p>
+            Im gegensatz zu <abbr title="Desktop-First und Flexbox">Aufgabe 1</abbr> sollte bei dieser Aufgabe nach der <dfn>Mobil-First</dfn> Strategie verfahren werden. Dazu wird die Webseite an einem  
+        </p>
     </example-tab>
 
     <example-tab title="Code">
