--- a/tasks/u5/index.html
+++ b/tasks/u5/index.html
@@ -57,23 +57,23 @@
         <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
     </example-tab>
     
-    <example-tab title="Code - Primzahlen ohne Webworker">
+    <example-tab title="Code - Primzahlen ohne WW">
         <file-viewer src="/tasks/u5/a3_1.html">a3_1.html</file-viewer>
     </example-tab>
 
-    <example-tab title="Vorschau - ohne Webworker">
+    <example-tab title="Vorschau - ohne WW">
         <embed-browser src="/tasks/u5/a3_1.html"></embed-browser>
     </example-tab>
 
-    <example-tab title="Code - Primzahlen mit Web Worker">
+    <example-tab title="Code - Primzahlen mit WW">
         <file-viewer src="/tasks/u5/a3_2.html">a3_2.html</file-viewer>
     </example-tab>
 
-    <example-tab title="Code - Webworker">
+    <example-tab title="Code - WW">
         <file-viewer src="/tasks/u5/a3.js">a3.js</file-viewer>
     </example-tab>
 
-    <example-tab title="Vorschau - mit Webworker">
+    <example-tab title="Vorschau - mit WW">
         <embed-browser src="/tasks/u5/a3_2.html"></embed-browser>
     </example-tab>
 </example-tabs>
