--- a/tasks/u7/index.html
+++ b/tasks/u7/index.html
@@ -1,1 +1,45 @@
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique dolorum libero officiis molestiae accusantium obcaecati blanditiis repudiandae non quis cupiditate.
+<h2>Aufgabe 7.1 - File Generatoren</h2>
+
+<example-tabs>
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+
+    <example-tab title="Code - File Gen">
+        <file-viewer src="/tasks/u7/a1_a.js">number_file_gen.js</file-viewer>
+    </example-tab>
+
+    <example-tab title="Code - Alpha File Gen">
+        <file-viewer src="/tasks/u7/a1_b.js">alpha_file_gen.js</file-viewer>
+    </example-tab>
+</example-tabs>
+
+
+<h2>Aufgabe 7.2 - Performance Merge</h2>
+
+<example-tabs>
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+
+    <example-tab title="Code - Merge">
+        <file-viewer src="/tasks/u7/a2_a.js">merge_files.js</file-viewer>
+    </example-tab>
+
+    <example-tab title="Code - Merge Stream">
+        <file-viewer src="/tasks/u7/a2_b.js">merge_streams.js</file-viewer>
+    </example-tab>
+
+    <example-tab title="Ergebnisse">
+        <p>
+            Grundlage waren 5 Messungen: <br>
+            Async: 1.329ms<br>
+            Stream: 0.971ms
+        </p>
+    </example-tab>
+</example-tabs>
+
+<h2>Aufgabe 7.3 - Express.js Server</h2>
+<strong>Nachholen</strong>
