--- a/tasks/u8/index.html
+++ b/tasks/u8/index.html
@@ -1,1 +1,110 @@
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique dolorum libero officiis molestiae accusantium obcaecati blanditiis repudiandae non quis cupiditate.
+<h2>Aufgabe 8.1 - Web-Komponenten erstellen</h2>
+
+<h3>8.1.1 - Einkaufsliste</h3>
+<example-tabs>
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+
+    <example-tab title="Code">
+        <file-viewer src="/tasks/u8/a1_1.html">a1_1.html</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau">
+        <embed-browser src="/tasks/u8/a1_1.html"></embed-browser>
+    </example-tab>
+</example-tabs>
+
+<h3>8.1.2 - Rednerliste</h3>
+<example-tabs>
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+
+    <example-tab title="Code">
+        <file-viewer src="/tasks/u8/a1_2.html">a1_2.html</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau">
+        <embed-browser src="/tasks/u8/a1_2.html"></embed-browser>
+    </example-tab>
+</example-tabs>
+
+<h3>8.1.3 - Tabellenkalkulation</h3>
+
+<strong>TODO</strong>
+
+<h3>8.1.4 - Statistik-Balkendiagramm</h3>
+
+<example-tabs>
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+
+    <example-tab title="Code">
+        <file-viewer src="/tasks/u8/a1_4.html">a1_4.html</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau">
+        <embed-browser src="/tasks/u8/a1_4.html"></embed-browser>
+    </example-tab>
+</example-tabs>
+
+<h3>8.1.5 - Bezier-Animation</h3>
+
+<example-tabs>
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+
+    <example-tab title="Code">
+        <file-viewer src="/tasks/u8/a1_5.html">a1_5.html</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau">
+        <embed-browser src="/tasks/u8/a1_5.html"></embed-browser>
+    </example-tab>
+</example-tabs>
+
+<h3>8.1.6 - Kalligraphie-Editor</h3>
+
+<example-tabs>
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+
+    <example-tab title="Code">
+        <file-viewer src="/tasks/u8/a1_6.html">a1_6.html</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau">
+        <embed-browser src="/tasks/u8/a1_6.html"></embed-browser>
+    </example-tab>
+</example-tabs>
+
+<h2>Aufgabe 8.2 - LitElement Menü-Komponente</h2>
+<example-tabs>
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+
+    <example-tab title="Code">
+        <file-viewer src="/tasks/u8/a2.html">a2.html</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau">
+        <embed-browser src="/tasks/u8/a2.html"></embed-browser>
+    </example-tab>
+</example-tabs>
+
+<h2>Aufgabe 8.3 - LitElement WWW-Navigator</h2>
+
+<strong>TODO</strong>
+
+<h2>Aufgabe 8.4 - Integration in die eigene Webseite</h2>
