--- a/tasks/u9/index.html
+++ b/tasks/u9/index.html
@@ -1,1 +1,51 @@
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique dolorum libero officiis molestiae accusantium obcaecati blanditiis repudiandae non quis cupiditate.
+<h2>Aufgabe 9.1 - PWA</h2>
+
+<h3>8.1.1 - Einkaufsliste</h3>
+<example-tabs>
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+
+    <example-tab title="Vorgehen">
+        <p>Mit der Library Lit-Element wurde ein Custom Element erzeugt, welches in die HTML-Webseite eingebunden wurde.
+            Dieses Custom-Element lädt durch die Angabe des Attributes "path" ein JSON-File, welches die Inhalte der Webseite bereithält.
+            Ein Service-Worker nutzt die Cache-Api um gewisse Webseiten-Anteile zu speichern. Weiterhin lauscht er auf das Fetch-Event, um bei anfallenden Anfragen die Webseiten aus dem Cache bereitzustellen. Das Manifest, welches im Root-Verzeichnis abliegt, enthält Informationen über die Web-App und ermöglicht die deren Installation.</p>
+    </example-tab>
+
+    <example-tab title="Probleme und Lösungskonzepte">
+        <p>
+            Ein Fehler, mit dem ich mich länger beschäftigen musste, war ein kleiner Tippfehler im Manifest. Versehentlich hatte ich im Image Attribut "size" anstatt "sizes" geschrieben. Leider kam es im Rahmen des Debuggings zu keiner entsprechenden Fehlermeldung, die einen auf den Fehler hätte hinweisen können. Eine gute Möglichkeit, um solche Fehler zu vermeiden, bieten sogenannte PWA-Manifest-Generatoren.
+        </p>
+    </example-tab>
+
+    <example-tab title="Lighthouse Messergebnisse">
+        <p>
+Leider hängt sich der Lighthouse Run jedes mal wieder auf. Anscheinend ist dies jedoch ein aktueller Fehler [https://github.com/GoogleChrome/lighthouse/issues/13396].
+Die App lässt sich dennoch ohne Probleme installieren und verwenden. <br> 
+Verzichtet man auf die Einbindung des Manifestes, so lassen sich durch Lighthouse folgende Werte ermitteln: <br>
+<pre>
+Performance: 99
+Accessibiility: 70
+Best Practices: 100
+SEO: 91
+
+First Contentful Paint: 1.4s
+Speed Index: 1.4s
+Largest Contentful Paint: 2.0s
+Time to Interactive: 1.4s
+Total Blocking Time: 0ms
+Cumulative Layout Shift: 0
+</pre>     
+</p>
+    </example-tab>
+    <example-tab title="PWA als Download">
+      <p>Die PWA aus der übung können Sie hier als ZIP herunterladen</p>
+      <button><a href="/tasks/u9/pwa.zip">PWA als ZIP herunterladen &#8659;</a></button>
+
+    </example-tab>
+
+</example-tabs>
+
+
+<h2>Aufgabe 9.2 - Integration in die eigene Webseite</h2>
