--- a/tasks/u11/index.html
+++ b/tasks/u11/index.html
@@ -1,1 +1,25 @@
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique dolorum libero officiis molestiae accusantium obcaecati blanditiis repudiandae non quis cupiditate.
+<h2>Aufgabe 11.1 - WebAssembly-Modul von Hand erstellen</h2>
+<example-tabs>
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+
+    <example-tab title="Code WAT">
+        <file-viewer src="/tasks/u11/a1_1.wat">ggt.wat</file-viewer>
+    </example-tab>
+
+    <example-tab title="Code JS">
+        <file-viewer src="/tasks/u11/a1_2.js">a1_2.js</file-viewer>
+    </example-tab>
+
+</example-tabs>
+
+
+<h2>Aufgabe 11.2 - Performanz-Messungen und -Vergleich</h2>
+
+
+
+
+
+<h2>Aufgabe 11.3 - Integration in die eigene Webseite</h2>
