--- a/tasks/u6/a3.html
+++ b/tasks/u6/a3.html
@@ -15,7 +15,7 @@
             display: block;
             margin: 0 auto 0;
             width: 80vw;
-            height: 75vh;
+            height: 60vh;
         }
 
         .wish{
@@ -43,6 +43,7 @@
             font-size: x-large;
             display: block;
             margin: 1em auto 0;
+            user-select: none;
         }
 
         #btnClear:hover{
