Einige Beschreibungen für die Aufgaben eingefügt

--- a/tasks/u2/index.html
+++ b/tasks/u2/index.html
@@ -30,7 +30,8 @@
     <example-tab title="&#9432;">
         <h3>Mobil-First und Grid-Layout</h3>
         <p>
-            Im gegensatz zu <abbr title="Desktop-First und Flexbox">Aufgabe 1</abbr> sollte bei dieser Aufgabe nach der <dfn>Mobil-First</dfn> Strategie verfahren werden. Dazu wird die Webseite an einem  
+            Im gegensatz zu <abbr title="Desktop-First und Flexbox">Aufgabe 1</abbr> sollte bei dieser Aufgabe nach der <dfn>Mobil-First</dfn> Strategie verfahren werden. Dazu wird die Webseite für einen kleinen meist im Hochformat ausgerichtetes Display entworfen und später durch Media Media-Querys an ein großes Display angepasst. Diese Startegie kann im Code an den <dfn>min-width</dfn> Attribut erkannt werden. <br>
+            Außerdem kam bei dieser Aufgabe das Gridlayout zum Einsatz, welches im Gegensatz zu der Flexbox ein zweidimensionales Layout darstellt. Dies bietet sich also besonders an, wenn man sowohl in die Höhe als uch in die Breite zeitgleich arbeiten möchte.
         </p>
     </example-tab>
 
@@ -47,8 +48,10 @@
 <example-tabs>
 
     <example-tab title="&#9432;">
-        <h3>Kleine nette Beschreibung</h3>
-        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+        <h3>Der Holy Grail</h3>
+        <p>
+            Als <dfn>Holy Grail</dfn> versteht man unter Webdesignern bzw. Webdeveloper ein Layout, welches sehr oft auf Webseiten zum Einsatz kommt. Dies sieht im Allgemeinen einen Header, einen Hauptbereich, einen Seitenbereich und einen Footer vor. Dabei sollen Header und Footer am oberen und unteren Ende der Webseite plaziert sein und einen Abschluss für diese Darstellten. Durch die Integration vom Flexbox- und Grid-Layout wurde die erstelung eines Holy-Grail deutlich vereinfacht. In dieser Aufgabe kann man beide Varianten betrachten.
+        </p>
     </example-tab>
 
     <example-tab title="Mockup">
@@ -79,8 +82,8 @@
 <example-tabs>
 
     <example-tab title="&#9432;">
-        <h3>Kleine nette Beschreibung</h3>
-        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+        <h3>Responiv Design mit Grid-Laout</h3>
+        <p>In dieser Aufgabe wurde das Wireframe aus <abbr title="Wireframe with HTML and CSS (Product Landing Page)">Aufgabe 1.5</abbr> nachgebaut und mit dem Grid-Laout gestaltet. Dadurch passt sich das Wireframe auch Responiv an den Bildschirm an. Sie können dieses Verhalten betrachten, indem Sie Ihren Browser langsam kleiner ziehen.</p>
     </example-tab>
     
 <example-tab title="Mockup">
@@ -99,4 +102,6 @@
 </example-tab>
 </example-tabs>
 <h2>Aufgabe 2.5 - Integration in die eigene Webseite</h2>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora magni dignissimos at quibusdam dolor quos quia, ab laborum atque quisquam.</p>
+<p>
+    Auf dieser Webseite kommt sowohl das Flexbox- sowie das Grid-Laout zu Einsatz. Die Basis der Webseite ist ein Gridlayout, dass in verschiedenen Breichen wie der Navigationsleiste oder der Tab-Vorschau durch Flexboxen unterstützt wurde.
+</p>
