--- a/tasks/u4/index.html
+++ b/tasks/u4/index.html
@@ -3,8 +3,10 @@
 <example-tabs>
 
     <example-tab title="&#9432;">
-        <h3>Kleine nette Beschreibung</h3>
-        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+        <h3>Dom Manipulation</h3>
+        <p>
+            Mit JavaScript kann auf das <abbr title="Document Object Model">DOM</abbr> zugegriffen und dies Manipuliert werden. Dies ermöglicht es weitere Elemente in den DOM einzufügen, zu entfernen, diese Anzupassen oder weitere Manipulationen vorzunehmen. In dieser Aufgabe sollte eine Einkaufsliste gestaltet werden, die neue Einträge in einer Liste erstellt, die in einer Textbox angegeben wurden. Neben dem reinen Text wurden auch Buttons erzeugt, die es erlauben die Einträge aus der Liste wieder zu entfernen. 
+        </p>
     </example-tab>
     
     <example-tab title="Mockup">
@@ -33,8 +35,10 @@
 <example-tabs>
 
     <example-tab title="&#9432;">
-        <h3>Kleine nette Beschreibung</h3>
-        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+        <h3>Erste Schritte mit asynchronen Ereignissen</h3>
+        <p>
+            Ähnlich zu <abbr title="Einkaufsliste">Aufgabe 4.1</abbr> sollten hier Einträge in eine Liste dynamisch aufgenommen werden können. In diese Rednerliste wird zusätzlich noch ein Timer hinzugefügt, der die Sprechzeit darstellen soll.
+        </p>
     </example-tab>
     
     <example-tab title="Mockup">
@@ -92,8 +96,8 @@
 <example-tabs>
 
     <example-tab title="&#9432;">
-        <h3>Kleine nette Beschreibung</h3>
-        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+        <h3>Weitere DOM-Manipulation</h3>
+        <p>Hier sollte ein <abbr title="What you see is what you get">WYSIWYG</abbr>-Editor entworfen werden, mit dem man Text und vor allem das Layout dynamisch bearbeiten kann.</p>
     </example-tab>
 
     <example-tab title="Code - a4.html">
@@ -110,4 +114,4 @@
   </example-tabs>
 
 <h2>Aufgabe 4.5 - Integration in die eigene Webseite</h2>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora magni dignissimos at quibusdam dolor quos quia, ab laborum atque quisquam.</p>
+<p>Die DOM-Manipulation ist auf dieser Webseite einen wichtigen Aspekt. Und bildet in zahlreichen Breichen einen wichtigen Grundbaustein für die Funktionalität. So wird beispielsweise das komplette Menü dynamisch via DOM-Manipulation erst während des Aufrufes gebildet.</p>
