--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script type="module" src="assets/js/components/lit/fileView/FileView.mjs" ></script>
     <script type="module" src="assets/js/components/lit/embedBrowser/EmbedBrowser.mjs"></script>
     <script type="module" src="assets/js/components/lit/TabView/TabViewer.mjs"></script>
+    <script type="module" src='assets/js/components/lit/reference/Reference.mjs'></script>
 
 </head>
 <body>
