--- a/tasks/u1/index.html
+++ b/tasks/u1/index.html
@@ -1,6 +1,8 @@
+<p>
+    Die ertse Aufgabe soll eine schnelle Einführung in das Thema Webengineering geben, indem grundlegende Technologien wie HTML, CSS und HTTP vorgestellt und in ersten Aufgaben eingesetzt werden. In den ersten zwei Aufgaben werden historische Aspkete zum WWW und technische feinheiten des HHTP-Protokolls erläutert. In den weiteren Aufgaben werden Wireframes mit HTML und CSS nachgebildet.  
+</p>
+
 <h2>Aufgabe 1.1 - Fachliche Argumentation über Erfolgsprinzipien des WWW</h2>
-
-
 <details class="question-box">
     <summary>Mit welchen fachlichen Argumenten wurde das WWW-Proposal von TBL abgelehnt?</summary>
     <p>Man hielt den Ansatz von TBL für einen Rückschritt, da durch seine Vorschläge "broken-links" entstehen konnten. Dieses Problem meinte man bereits gelöst zu haben. 
