--- a/tasks/u2/index.html
+++ b/tasks/u2/index.html
@@ -1,6 +1,19 @@
+<p>
+    Da immer mehr Endanwender Webseiten nicht mehr primär über einen Desktop Pc aufrufen sondern vermehrt auch über mobile Endgeräte (Siehe Abb. 2.1) wurde der Anspruch an Webseiten das Design benutzerfreundlicher für mobile Geräte zu gestalten immer größer.
+    <figure>
+        <img src="/tasks/u2/mobil_vs_desktop.png" alt="Statisitik mobil vs desktop">
+        <figcaption>
+            Abbildung 2.1: Verhältnis von Webseitenaufrufen in den Jahren 2019 und 2020 in den USA basieren auf 5.7 Trillion Webseiten Aufrufen <reference-source author="Perficent" year="2022" url="https://www.perficient.com/insights/research-hub/mobile-vs-desktop-usage">Mobile vs. Desktop Usage in 2020</reference-source>.
+        </figcaption>
+    </figure> 
+</p>
+
+<p>Da man doppelte Code-Basen gerne vermeiden möchte und nicht eine mobile und eine stationäre Webseite pflegen möchte, wurden die möglichkeiten mit HTML, CSS und JS immer größer Webseiten responsiv zu gestalten. Dies bedeutet die Webseite passt sich dynamisch an die Bildschirmauflösung an. Neben neuen Einheiten in CSS wie <dfn>VH</dfn> und <dfn>VW</dfn> gibt es viele weitere Layoutmöglichkeiten wie <dfn>Flexbox</dfn> und <dfn>Grid</dfn> die das entwickeln einer reponsiven Seite vereinfachen sollen. Diese beiden Technologien werden in dieser Aufgabe präsentiert.
+</p>
+
 <h2>Aufgabe 2.1 - Responsiv mit Flexbox Desktop-First</h2>
-<example-tabs>
-    
+
+<example-tabs>    
     <example-tab title="&#9432;">
         <h3>Desktop-First und Flexbox</h3>
         <p>In dieser Aufgabe wurde ein responsives Layout erarbeitet. Dafür wurden sogenannte <dfn>Flexboxen</dfn> eingesetzt. Diese erlauben es die Breite und Höhe dynamisch an den Seitenkontext anzupassen und verhinden ein Überlaufen der Komponenten (Komponenten bleiben breiter als der dargestellte Bereich). Das Flex-Layout ist ein eindimensionales Design Element, welches je nach Orientierung <dfn>flex-orientation</dfn> entweder in die höhe oder in die Breite wachen kann <br>
