--- a/tasks/u8/a2.html
+++ b/tasks/u8/a2.html
@@ -5,7 +5,7 @@
     <title>Lit-HTML Demo</title>
 
     <script type="module">
-        import {html, css, LitElement} from 'https://unpkg.com/lit-element/lit-element.js?module';
+        import {html, css, LitElement} from 'https://mkaul.github.io/lit/lib/lit.js'
         class LitMenu extends LitElement{
             static get styles(){
                 return css`
