--- a/tasks/u4/index.html
+++ b/tasks/u4/index.html
@@ -1,11 +1,14 @@
-<h2>Aufgabe 4.1 - Einkaufsliste</h2>
+<p>
+    Mittels JavaScript kann auf das <abbr title="Document Object Model">DOM</abbr> zugegriffen und dies Manipuliert werden. Dies ermöglicht es weitere Elemente in den DOM einzufügen, zu entfernen, diese Anzupassen oder weitere Manipulationen vorzunehmen. Erst dadurch wurde es möglich die statischen HTML Webseiten dynamischer zu gestalten und andauernde Reloads zu verhindern. Die DOM Manipulation kann sehr vielseitig eingesetzt werden, wie Sie auch in den weiteren Aufgaben sehen werden. Beispielsweise könne Sie so Eingabefelder bereits Client-Seitig überprüfen und sparen sich zusätzliche Kommunikkation mit dem Server. An sich können Sie die gesamte Seite viel dynamischer gestalten, indem Sie weitere Elemente zur Laufzeit erst erzeugen. Um diese Themen geht es in der folgenden Übung.
+</p>
 
+<h2>Aufgabe 4.1 - Einkaufsliste</h2>
 <example-tabs>
 
     <example-tab title="&#9432;">
         <h3>Dom Manipulation</h3>
         <p>
-            Mit JavaScript kann auf das <abbr title="Document Object Model">DOM</abbr> zugegriffen und dies Manipuliert werden. Dies ermöglicht es weitere Elemente in den DOM einzufügen, zu entfernen, diese Anzupassen oder weitere Manipulationen vorzunehmen. In dieser Aufgabe sollte eine Einkaufsliste gestaltet werden, die neue Einträge in einer Liste erstellt, die in einer Textbox angegeben wurden. Neben dem reinen Text wurden auch Buttons erzeugt, die es erlauben die Einträge aus der Liste wieder zu entfernen. 
+            In dieser Aufgabe sollte eine Einkaufsliste gestaltet werden, die neue Einträge in einer Liste erstellt, die in einer Textbox angegeben wurden. Neben dem reinen Text wurden auch Buttons erzeugt, die es erlauben die Einträge aus der Liste wieder zu entfernen. 
         </p>
     </example-tab>
     
@@ -66,8 +69,8 @@
 <example-tabs>
 
     <example-tab title="&#9432;">
-        <h3>Kleine nette Beschreibung</h3>
-        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+        <h3>Einfacher Excel Klon im Browser</h3>
+        <p>Hier sollte eine einfache Tabellenkalkulation entwickelt werdn, die in der Lage war eine einfache Summenformel auszuwerten.</p>
     </example-tab>
 
     <example-tab title="Mockup">
