--- a/tasks/u9/index.html
+++ b/tasks/u9/index.html
@@ -1,10 +1,11 @@
+<p>
+    Aufgabe 9 beschäftigt sich mit <dfn>Progressive Web Apps</dfn> (PWA). Wie bereits in Aufgabe 2 herausgestellt wurde, erfolgt der zugriff auf Webseiten immer mehr über mobile Endgeräte. Neben responisven Webseiten wurden in den vergangenen Jahren auch oft Apps für die mobile Anwendug entwickelt. Dadurch ergeben sich doppelte Code-Basen die auch von unterschiedlichen Teams meist mit unterschiedlichen Programmiersprachen gepflegt werden müssen. PWA's sollen dem Abhilfe schaffen, indem Webseiten wie native Apps installierbar werden. Des Weiteren sollen sie auch offline verwendbar werden indem sie mittels Service Worker die Webseite cachen.  
+</p>
 <h2>Aufgabe 9.1 - PWA</h2>
-
-<h3>8.1.1 - Einkaufsliste</h3>
 <example-tabs>
     <example-tab title="&#9432;">
-        <h3>Kleine nette Beschreibung</h3>
-        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+        <h3>Erste PWA</h3>
+        <p>In dieser Aufgabe sollte aus dem aus Aufgabe TODO entworfenen Web Navigator eine PWA entwickelt werden. Da es schierig ist eine PWA in einer Webseite zu präsentieren wird in dieser Aufgabe lediglich das Vorgehen beschrieben. Sollten Sie dennoch einen Blick in die PWA werfen wollen, können Sie sich alle relevanten Dateien als ZIP iim letzten Tab herunterladen.</p>
     </example-tab>
 
     <example-tab title="Vorgehen">
@@ -21,8 +22,7 @@
 
     <example-tab title="Lighthouse Messergebnisse">
         <p>
-Leider hängt sich der Lighthouse Run jedes mal wieder auf. Anscheinend ist dies jedoch ein aktueller Fehler [https://github.com/GoogleChrome/lighthouse/issues/13396].
-Die App lässt sich dennoch ohne Probleme installieren und verwenden. <br> 
+Leider hängt sich der Lighthouse Run jedes mal wieder auf. Anscheinend ist dies jedoch ein aktueller Fehler <reference-source author="Connor Clark" year="2021" url="https://github.com/GoogleChrome/lighthouse/issues/13396">Lighthouse in DevTools errors/hangs on installability checks</reference-source> Die App lässt sich dennoch ohne Probleme installieren und verwenden. <br> 
 Verzichtet man auf die Einbindung des Manifestes, so lassen sich durch Lighthouse folgende Werte ermitteln: <br>
 <pre>
 Performance: 99
@@ -40,7 +40,7 @@ Cumulative Layout Shift: 0
 </p>
     </example-tab>
     <example-tab title="PWA als Download">
-      <p>Die PWA aus der übung können Sie hier als ZIP herunterladen</p>
+      <p>Die PWA aus der übung können Sie hier als ZIP herunterladen</p> <br>
       <button><a href="/tasks/u9/pwa.zip">PWA als ZIP herunterladen &#8659;</a></button>
 
     </example-tab>
@@ -49,3 +49,4 @@ Cumulative Layout Shift: 0
 
 
 <h2>Aufgabe 9.2 - Integration in die eigene Webseite</h2>
+<p>Diese Webseite ist ebenfalls eine PWA! Um sie auch offline verwenden zu können installieren Sie die App einfach über Ihren Browser. </p>
