--- a/tasks/u4/index.html
+++ b/tasks/u4/index.html
@@ -70,7 +70,10 @@
 
     <example-tab title="&#9432;">
         <h3>Einfacher Excel Klon im Browser</h3>
-        <p>Hier sollte eine einfache Tabellenkalkulation entwickelt werdn, die in der Lage war eine einfache Summenformel auszuwerten.</p>
+        <p>
+            Hier sollte eine einfache Tabellenkalkulation entwickelt werdn, die in der Lage war eine einfache Summenformel auszuwerten.
+            In dieser Version ist lediglich eine einfache Summenoperation möglich. Sie können dies in der Vorschau testen, indem Sie belibige Werte in zwei Zellen eintragen und in eine dritte Zelle: "sum=1,1:2,2" eingeben. Passen Sie die Parameter für die Summe entsprechend der ausgewählten Zellen an!
+        </p>
     </example-tab>
 
     <example-tab title="Mockup">
@@ -84,13 +87,10 @@
         <file-viewer src="/tasks/u4/a3.html">a3.html</file-viewer>
     </example-tab>
 
-    <example-tab title="Code - a3.js">
-        <file-viewer src="/tasks/u4/a3.js">a3.js</file-viewer>
-    </example-tab>
-
     <example-tab title="Vorschau">
         <embed-browser src="/tasks/u4/a3.html"></embed-browser>
     </example-tab>
+
   </example-tabs>
 
 
