--- a/tasks/u8/index.html
+++ b/tasks/u8/index.html
@@ -34,7 +34,22 @@
 
 <h3>8.1.3 - Tabellenkalkulation</h3>
 
-<strong>TODO</strong>
+<example-tabs>
+    <example-tab title="&#9432;">
+        <h3>Einfacher Excel Klon</h3>
+        <p>
+            lirum larum
+        </p>
+    </example-tab>
+
+    <example-tab title="Code">
+        <file-viewer src="/tasks/u8/a1_3.html">a1_3.html</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau">
+        <embed-browser src="/tasks/u8/a1_3.html"></embed-browser>
+    </example-tab>
+</example-tabs>
 
 <h3>8.1.4 - Statistik-Balkendiagramm</h3>
 
